# Desarrollo-de-Aplicaciones-Multiplataforma

./: .gitignore  README.md  loginfo.txt  package.json
Curso 1/Bases de Datos/Ejercicios/: Ejercicio_1_Slides_Tema_1.txt  Script Clase.sql
Curso 1/Bases de Datos/Entrega 1#/: Colección ejercicios Tema 1.docx  ~WRL1706.tmp
Curso 1/Bases de Datos/Extras/: Ejemplos Consultas Extendido.sql
Curso 1/Entornos de desarollo/Temario/: Tema 1. Desarrollo del Software.docx  Unidad 1. Desarrollo de software.ppsx  Unidad 2. Instalación y uso de entornos de desarrollo.ppsx  readme.txt
Curso 1/Formación y orientación laboral/Ejercicios/: Análisis DAFO.odt  Ejercicios_Slides.txt
Curso 1/Lenguaje de marcas y sistemas de gestión de información/Extras/: Ejemplo flex.html
Curso 1/Lenguaje de marcas y sistemas de gestión de información/Temario/: Tema 1. Evolución de los Lenguajes de Marcas.docx
Curso 1/Lenguaje de marcas y sistemas de gestión de información/Transparencias/: UD_01.ppsx  UD_02.ppsx
Curso 1/Programación/Ejercicios/: EjecicioClaseVectores.txt  Ejemplo_uso_vectores.txt  Ejercicio_3.txt  Ejercicio_5.txt  Ejercicio_6.txt  Ejercicio_7.txt
Curso 1/Programación/Ejercicios/Ejercicios C++/Ejercicio1/: CMakeLists.txt  Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp
Curso 1/Programación/Ejercicios/Ejercicios C++/Ejercicio8/: CMakeLists.txt  Enunciado.txt  main.cpp
Curso 1/Programación/Extras/: Estructuras de Repetición de algoritmos.docx  javadoc_help.txt
Curso 1/Programación/Exámenes/: Programa1.java  Programa2.java
Curso 2/Acceso a datos/Extras/: PredicateUsage.java  (+1 more)
(+3625 files in other folders)
